--- a/alire.toml
+++ b/alire.toml
@@ -19,15 +19,17 @@ See the project's [website](https://github.heisenbug.eu/si_units) for more
 details.
 """
 name = "si_units"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Vinzent \"Jellix\" Saranen"]
 website = "https://github.heisenbug.eu/si_units"
-licenses = ["WTFPL"]
+licenses = "WTFPL"
 tags = ["utilities", "formatting"]
 maintainers = ["vinzent@heisenbug.eu"]
 maintainers-logins = ["Jellix"]
-project-files = ["si_units.gpr", "test/si_units_test.gpr"]
-executables = ["main_si_units_test"]
+project-files = ["si_units.gpr"]
 
 [gpr-externals]
 SI_UNITS_BUILD_MODE = ["debug", "release"]
+
+[configuration]
+disabled=true
